# HypnoSquid

./: .clang-tidy  CMakeLists.txt  README.md  hypnosquid.json  main.cc  sand_example.cc
HypnoSquid.Core/: CMakeLists.txt
HypnoSquid.Core/include/: ComponentReference.hh  Engine.hh  Filter.hh  Query.hh  common.hh
HypnoSquid.Core/include/HypnoSquid.Core/: Commands.hh  ComponentID.hh  ComponentReference.hh  ComponentRegistry.hh  ComponentState.hh  ComponentStore.hh  Engine.hh  Entity.hh  Extension.hh  Filter.hh  InvocationID.hh  PluginName.hh  Query.hh  SystemState.hh  TypeIterator.hh  World.hh  common.hh  config.hh
HypnoSquid.Core/include/HypnoSquid.Core/components/: Commands.hh  ComponentExtension.hh  ComponentID.hh  ComponentReference.hh  ComponentRegistry.hh  ComponentState.hh  ComponentStore.hh  Filter.hh  Query.hh  World.hh
HypnoSquid.Core/include/HypnoSquid.Core/world_extension/: Commands.hh  ComponentName.hh  ComponentRegistry.hh  Filter.hh  Query.hh  WorldExtension.hh
HypnoSquid.Core/src/: Engine.cc
TestPlugin/: CMakeLists.txt
TestPlugin/include/: TestPlugin.hh
TestPlugin/src/: TestPlugin.cc
